# django-spaces

./: .gitignore  Readme.md  setup.cfg
spaces/: apps.py  decorators.py  middleware.py  mixins.py  models.py  monkey.py  roles.py  tests.py  urls.py  util.py
spaces/management/commands/: closeexpiredspaces.py
spaces/migrations/: 0001_initial.py  0002_auto_20151025_1731.py  0003_auto_20151029_1353.py  0004_spaceplugin.py
spaces/templatetags/: space_tags.py
