[metadata]
name = django_spaces
author = Mattes Sarcander
description = Provides url based isolated content for user groups.
version = 0.1
url = https:///github.com/Fortschritt/django-spaces
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4